# snaplet-riak

./: .travis.yml  README.markdown  README.md  snaplet-riak.cabal
src/Snap/Snaplet/: Riak.hs
