name:                snaplet-riak
version:             0.2.1.1
synopsis:            A Snaplet for the Riak database
description:         A Snaplet allowing easy use of the Riak database within
                     the Snap framework.
homepage:            http://github.com/tmcgilchrist/snaplet-riak
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          Tim McGilchrist <timmcgil@gmail.com>
copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src

  Build-depends:
                     base                      >= 4         && < 5
                   , transformers              >= 0.4.1     && < 0.6
                   , mtl                       >= 2.1.2     && < 2.3
                   , containers                >= 0.5.0     && < 0.6
                   , aeson                     >= 0.7.0.4   && < 1.3
                   , lens                      >= 3.7.6     && < 4.16
                   , snap                      == 1.0.*
                   , riak                      == 1.1.*
                   , riak-protobuf             >= 0.16.0    && < 0.23
                   , time                      >= 1.4.0     && < 1.8

  Exposed-modules:            Snap.Snaplet.Riak

source-repository head
  type:     git
  location: https://github.com/tmcgilchrist/snaplet-riak.git
